v21.07/en/_sources/camera_modules.rst.txt
3D camera modules

The

rc_cube

's 3D camera software consists of the following modules:

Stereo camera (rc_stereocamera, Section \ref{stereo_camera:sect-
stereo-camera})  acquires stereo image pairs and performs planar
rectification for using the stereo camera as a measurement device.
Images are provided both for further internal processing by other
modules and for external use as GenICam image streams.

Stereo matching (rc_stereomatching, Section \ref{stereo_matching:sect-
stereo-matching})  uses the rectified stereo image pairs to compute 3D
depth information such as disparity, error, and confidence images.
These are provided as GenICam streams, too.

The

Stereo camera

 and the

Stereo matching

 modules, which acquire stereo image pairs and compute 3D depth
information such as disparity, error, and confidence images, are also
accessible via the

rc_cube

's

GigE Vision/GenICam interface

.

