v24.01/en/_sources/camera_modules.rst.txt
3D camera modules

The

rc_cube

's 3D camera software consists of the following modules:

Camera (rc_camera, Section \ref{stereo_camera:sect-stereo-camera})
acquires image pairs and performs planar rectification for using the
camera as a measurement device. Images are provided both for further
internal processing by other modules and for external use as GenICam
image streams.

Stereo matching (rc_stereomatching, Section \ref{stereo_matching:sect-
stereo-matching})  uses the rectified stereo image pairs of the
connected stereo camera, e.g. the rc_visard, to compute 3D depth
information such as disparity, error, and confidence images. These are
provided as GenICam streams, too.

Blaze (rc_blaze, Section \ref{blaze:sect-blaze})  provides 3D depth
information such as disparity, error, and confidence images of the
connected Basler blaze RGB-D camera. These are provided as GenICam
streams, too.

These modules are pipeline specific, which means that they run inside
each camera pipeline. Changes to their settings or parameters only
affect the corresponding pipeline and have no influence on the other
camera pipelines running on the

rc_cube

.

Note: The Stereo Matching module is only available in camera
  pipelines of type "rc_visard" or "rc_viscore". The Blaze module is
  only available in camera pipelines of type "blaze".

The

Camera

 and the

Stereo matching

 modules, which acquire image pairs and compute 3D depth information
such as disparity, error, and confidence images, are also accessible
via the

rc_cube

's

GigE Vision/GenICam interface

.

